<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:useCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvLastExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_expense"
                android:layout_marginTop="8dp" />

            <Button
                android:id="@+id/btnAddNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_expense"
                android:layout_marginTop="12dp" />

            <Button
                android:id="@+id/btnViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_detail_expense"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>
